# starling_dynamics

./: README.md  pyproject.toml
starling_dynamics/: __init__.py  dynamics.py  imu.py  quaternion.py
